style: fix double scrollbar, ensure body height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,8 +72,14 @@
   }
 
   body {
-    @apply bg-background text-foreground overflow-x-hidden;
+    @apply bg-background text-foreground;
   }
+}
+
+html,
+body {
+  overflow-x: hidden;
+  height: 100%;
 }
 
 html {
